--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "cv-data"]
 	path = cv-data
-	url = https://gitlab.com/Ruberhauptmann/cv-data.git
+	url = https://github.com/Ruberhauptmann/cv-data.git
